tests/golden/type_errors/map_bad_key.cd
let values = {[1, 2]: "array key"};
