tests/golden/type_errors/map_bad_key.err
Type error at 1:21: map key must be nil, number, bool, or string
  let values = {[1, 2]: "array key"};
                      ^
